...
                                                    <segue destination="Jnf-rE-isf" kind="show" id="hy8-nT-lAn"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4kB-Md-XdY">
                                                <rect key="frame" x="0.0" y="66" width="374" height="66"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
                                                <state key="normal" title="Log In"/>
                                                <connections>
                                                    <action selector="logInButton:" destination="Mbq-hf-vVe" eventType="touchUpInside" id="wpj-B1-1E3"/>
                                                    <segue destination="azm-ho-JgU" kind="show" id="Ztk-6g-f6u"/>
                                                </connections>
                                            </button>
                                        </subviews>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g7E-wy-nbf">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="52.666666666666664"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="44"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter email" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="C8K-y3-PEM">
                                                <rect key="frame" x="0.0" y="62.666666666666686" width="374" height="34"/>
                                                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <connections>
                                                    <action selector="emailTF:" destination="azm-ho-JgU" eventType="editingDidEnd" id="xNg-oD-toK"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BSj-QI-mFG">
                                                <rect key="frame" x="0.0" y="0.0" width="374" height="51.333333333333336"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="43"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter password" textAlignment="natural" clearsOnBeginEditing="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2Mr-nK-BKj">
                                                <rect key="frame" x="0.0" y="61.333333333333314" width="374" height="34"/>
                                                <color key="backgroundColor" systemColor="systemGray3Color" red="0.78039215689999997" green="0.78039215689999997" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                <textInputTraits key="textInputTraits"/>
                                                <connections>
                                                    <action selector="passwordTF:" destination="azm-ho-JgU" eventType="editingDidEnd" id="pop-HD-UkA"/>
...
